# wspp

./: CMakeLists.txt  LICENSE  README.md
include/: webclient.h  webserver.h  wspp.h
src/: main.cpp  webclient.cpp  webserver.cpp  wspp.cpp
